# treesitter4j

./: .gitignore  CONTRIBUTING.md  Readme.md  pom.xml
.github/: dependabot.yml
.github/workflows/: build-wasm.yml  ci.yml  rebuild-wasm.yml  release.yml
core/: pom.xml
core/src/main/java/io/roastedroot/treesitter/: Language.java  TreeSitter.java  TreeSitterCapture.java  TreeSitterException.java  TreeSitterNode.java  TreeSitterParser.java  TreeSitterPool.java  TreeSitterQuery.java  TreeSitterQueryResult.java  TreeSitterTree.java
core/src/main/java/io/roastedroot/treesitter/ast/: ASTExporter.java  ASTJsonSerializer.java  ASTNode.java  ASTTree.java
core/src/test/java/io/roastedroot/treesitter/: TreeSitterJSONTest.java  TreeSitterJavaTest.java  TreeSitterMarkdownTest.java  TreeSitterParallelTest.java  TreeSitterPoolTest.java  TreeSitterPropertiesTest.java  TreeSitterQueryTest.java  TreeSitterTest.java
core/src/test/java/io/roastedroot/treesitter/ast/: ASTJsonRoundTripTest.java
core/src/test/java/io/roastedroot/treesitter/query/: TreeSitterQueryAnnotationTest.java  TreeSitterQueryClassTest.java  TreeSitterQueryMethodTest.java
core/src/test/java/io/roastedroot/treesitter/query/xml/: QueryPomDependencyTest.java
wasm-build/: Cargo.toml  Makefile
wasm-build/src/: lib.rs
wasm-build/wasm/: tree-sitter.wasm
