[package]
name = "tree-sitter-wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "tree_sitter_wasm"
crate-type = ["cdylib"]

[dependencies]
tree-sitter = "0.26.9"
streaming-iterator = "0.1.9"
tree-sitter-json = "0.24.8"
tree-sitter-java = "0.23.5"
tree-sitter-properties = "0.3.0"
tree-sitter-html = "0.23.2"
tree-sitter-xml = "0.7.0"
tree-sitter-md = "0.5.3"
tree-sitter-yaml = "0.7.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = "abort"
